# yt_persona

./: .env.example  .gitignore  ACTION_PLAN (1).md  README.md  current_status.md  pyproject.toml  test_ingestion.py  test_youtube_api.py
.agent/rules/: response-style-guide.md
api/: __init__.py  main.py
api/services/: rag_service.py
ingestion/: __init__.py  fetch_transcripts.py  fetch_videos.py  youtube_client.py
parkerstyle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
processing/: __init__.py  chunk_transcripts.py
tests/: test_youtube_client.py
vectorstore/: check_stats.py  pinecone_client.py  test_pinecone.py
